--- a/rockola-services/package.json
+++ b/rockola-services/package.json
@@ -24,9 +24,12 @@
     "@nestjs/common": "^7.5.1",
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/websockets": "^7.6.12",
+    "irc": "^0.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "ws": "^7.4.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
