--- a/rockola-services/package.json
+++ b/rockola-services/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/websockets": "^7.6.12",
+    "axios": "^0.21.1",
     "irc": "^0.5.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
